poll.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: poll-app
  namespace: default
spec: 
  replicas: 2
  selector: 
    matchLabels: 
      app: poll-app
  template: 
    metadata: 
      labels: 
        app: poll-app
    spec: 
      containers: 
      - name: poll-ap
        image: epitechcontent/t-dop-600-poll:k8s
        ports: 
        - containerPort: 80
        resources:
          limits: 
            memory: "128Mi"
      restartPolicy: Always
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - topologyKey: kubernetes.io/hostname
              labelSelector:
                matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - epitech-s4qe
                      - epitech-s4ql
