postgres.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-app
  namespace: default
spec:
  selector:
    matchLabels:
      app: postgres-app
  template:
    metadata:
      labels:
        app: postgres-app
    spec:
      volumes:
      - name: postgres-pv
        persistentVolumeClaim:
          claimName: postgres-pv-claim
      containers:
      - name: postgres-app
        image: postgres:12
        volumeMounts:
        - name: postgres-pv
          mountPath: /var/lib/postgresql/data
        ports:
        - containerPort: 5432
        resources: # Not required but VS Code complains when omitted
          limits:
            memory: "128Mi"
            cpu: "500m"
      restartPolicy: Always
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                  - epitech-s4qe
