result.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: result-app
  namespace: default
spec: 
  replicas: 2
  selector: 
    matchLabels: 
      app: result-app
  template: 
    metadata: 
      labels: 
        app: result-app
    spec: 
      containers:
      - name: result-app
        image: epitechcontent/t-dop-600-result:k8s
        ports: 
        - containerPort: 80
        resources: 
          limits: 
            memory: "128Mi"
      restartPolicy: Always
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - topologyKey: kubernetes.io/hostname
              labelSelector:
                matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - epitech-s4qe
