traefik.deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: traefik-deployment
    namespace: kube-public
    labels:
        app: traefik
spec:
    replicas: 2
    selector:
        matchLabels:
            app: traefik
    template:
        metadata:
            labels:
                app: traefik
        spec:
            containers:
                - name: traefik
                  image: traefik:1.7
                  ports:
                    - name: http 
                      containerPort: 80
                    - name: admin 
                      containerPort: 8080
                  args:
                    - --api
                    - --kubernetes
                    - --logLevel=INFO
            restartPolicy: Always
            affinity:
              podAntiAffinity:
                requiredDuringSchedulingIgnoredDuringExecution:
                  - topologyKey: kubernetes.io/hostname
                    labelSelector:
                      matchExpressions:
                        - key: kubernetes.io/hostname
                          operator: In
                          values:
                            - epitech-s4qe
                            - epitech-s4ql
