poll.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: poll-ingress
spec:
  rules:
    - host: poll.dop.io
      http:
        paths:
        - path: /
          backend:
            serviceName: poll-service
            servicePort: http
